website/src/index.css
@tailwind base;
@tailwind utilities;
@tailwind components;

/* Overlay Particles */
body:before,
body:after {
    content: "";
    display: block;

    pointer-events: none;
    position: absolute;
    top: 6rem;
    left: -5rem;
    z-index: -99;

    width: 25rem;
    height: 25rem;
    border-radius: 15% 50% 50% 25%;

    opacity: 0.2;
    background: red;
    filter: blur(200px);
}
body:after {
    background: blue;
    left: 70%;
    top: 20rem;
}

/* Main Scrollbar */
body::-webkit-scrollbar-track
{
    background-color: #44403c;
}
body::-webkit-scrollbar
{
    width: 6px;
}
body::-webkit-scrollbar-thumb
{
    border-radius: 12px;
    background-color: #78716c;
}
body::-webkit-scrollbar-thumb:hover
{
    background-color: #9e9792;
}
body::-webkit-scrollbar-thumb:active
{
    background-color: #36312e;
}

